--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,1 +1,29 @@
-I acknowledge myself as author of this.
+There are a great number of people who were either direct or indirect contributors to the creation of this thesis, and I would be remiss if I failed to mention every single one.
+
+First and foremost, to my adviser Professor Sebasian Seung, for finding 2 hours every week to guide and mentor me and our thesis group. Your input was invaluable (as was your generous support for acquiring compute resources!). There is no way any of us could have made any headway on the segmentation problem without you. I've learned more in these two semesters of being your advisee than I have in any class at Princeton; for that I am truly grateful.
+
+To Kisuk Lee, for knowing the answers to my questions before I even asked them, and for providing guidance to our group. I aspire to one day know as many tricks about training neural nets as you do.
+
+To the members of the Seung Lab: Ignacio Tartavull, Dodam Ih, Jonathan Zung, and William Wong. Thank you for your inexhaustable willingess to help our group understand the subproblems in the segmentation task, and for being available at altogether unreasonable hours to answer our Slack questions.
+
+To the non-Frank members of my thesis group: Sharon You, Evelyn Ding, and Nathan Lam. You picked up my slack when I had unproductive weeks, you helped me debug my learning problems, you made me laugh when our work was overwhelming, you put up with (and helped me combat) my compulsion to work on infrastructure rather than actual research. Without you all, there would be no thesis. I'm so glad we grew so close this year.
+
+To Frank Jiang, my roommate, my thesis groupmate, and one of my very best friends. We have been through so much together these last 4 years since the Bloomberg 3rd floor lounge: we've roomed together at Princeton every year since Sophomore year, lived in Lisel's windowless room together in Park Slope, studied abroad in London together, traveled Europe together, and generally found that our education/career goals had converged completely. You're one of the smartest people I know, and always willing to drop whatever you're doing to work on a hard problem. I don't know what I'm going to do without you next year, bud.
+
+To Benjamin ``Careful Danger" Leizman, for your endless support and bottomless friendship. We've been around the block together, and you've always been there for me when I needed you. You're a class act, and I love ya, man.
+
+To Keith Gladstone for inspiring me on a daily basis with your hopeless, hopeless romanticism.
+
+To the group message formerly known as edges2cats (Elias Rubin, Vlad Feinberg, Thomas Hartke, and Keith), for wasting my time with pointless conversations that somehow I always thoroughly enjoyed.
+
+To the Cloister Lifeguards, for being one of the most consistent, cohesive groups of people I've ever had the pleasure to call my friends.
+
+To my T8 Fam and my Sympeeps, for being the most fun I've had at Princeton, hands down. I would have snapped my laptop in two if I didn't have dance this year.
+
+To my second reader, Professor Thomas Funkhouser, for taking the time to read 70+ pages about this thing I did.
+
+To Sebastian Riedel, Tim Rocktäschel, and Isabelle Augenstein for exposing me to learning with TensorFlow long before I started this project.
+
+To the Princeton Office of Stewardship and the Princeton Office of Financial Aid: I certainly would not be here without the \underline{extremely} generous financial aid grants I've received.
+
+And, last but not least, to my parents. Mom and Dad, you taught me everything I know. You set me up for success at every turn, and always provided me so much love and support. I love you both immensely. I hope I've made you proud.
